2006-10-23  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-retrieve-function): New user option.
	(mixi-retrieve): Abolish.
	(mixi-w3-retrieve): New function.
	(mixi-w3m-retrieve): Ditto.
	(mixi-retrieve-1): Ditto.
	(mixi-login): Follow the change above.
	(with-mixi-retrieve): Ditto.

2006-10-23  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el: Require `url' instead of `w3m'.
	(mixi-retrieve): Follow the change above.
	(mixi-login): Ditto.
	(mixi-continuously-access-interval): Increase to 4.0.
	(mixi-verbose): Abolish.
	(mixi-friend-to-id): Ditto.
	(mixi-community-to-id): Ditto.

2006-10-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-make-community): New slot `members'.
	(mixi-community-members): New accessor method.
	(mixi-community-set-members): Ditto.
	(mixi-community-members-regexp): New constant.
	(mixi-community-realize): Use them.

	* mixi.el (mixi-make-community): New slot `open level'.
	(mixi-community-open-level): New accessor method.
	(mixi-community-set-open-level): Ditto.
	(mixi-community-open-level-regexp): New constant.
	(mixi-community-realize): Use them.

	* mixi.el (mixi-make-community): New slot `authority'.
	(mixi-community-authority): New accessor method.
	(mixi-community-set-authority): Ditto.
	(mixi-community-authority-regexp): New constant.
	(mixi-community-realize): Use them.

2006-10-22  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-make-friend): New slot `sex'.
	(mixi-friend-sex): New accessor method.
	(mixi-friend-set-sex): Ditto.
	(mixi-friend-name-sex-regexp): Rename from `mixi-friend-name-regexp'.
	(mixi-my-name-regexp): Abolish.
	(mixi-friend-realize): Use them.

	* mixi.el (mixi-make-friend): New slot `address'.
	(mixi-friend-address): New accessor method.
	(mixi-friend-set-address): Ditto.
	(mixi-friend-address-regexp): New constant.
	(mixi-friend-realize): Use them.

	* mixi.el (mixi-make-friend): New slot `age'.
	(mixi-friend-age): New accessor method.
	(mixi-friend-set-age): Ditto.